--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -35,6 +35,7 @@ option (UNIT_TEST_COMM_CHN "Unit testing: communication channel module")
 option (UNIT_TEST_TRANS_CHN "Unit testing: transfer channel module")
 option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
+option (UNIT_TEST_MONITOR "Unit testing: monitor")
 
 message("  unit_tests/...")
 
@@ -92,3 +93,8 @@ if (UNIT_TESTS OR UNIT_TEST_RESOURCE_TRACKER)
   message("    resource_tracker")
   add_subdirectory(resource_tracker)
 endif(UNIT_TESTS OR UNIT_TEST_RESOURCE_TRACKER)
+
+if (UNIT_TESTS OR UNIT_TEST_MONITOR)
+  message("    monitor")
+  add_subdirectory(monitor)
+endif(UNIT_TESTS OR UNIT_TEST_MONITOR)
