--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -146,7 +146,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_consumer.hpp
   ${REPLICATION_DIR}/log_generator.hpp
   ${REPLICATION_DIR}/replication_entry.hpp
-  ${REPLICATION_DIR}/replication_stream.hpp
+  ${REPLICATION_DIR}/replication_stream_entry.hpp
   )
 
 set(EXECUTABLE_SOURCES
@@ -209,7 +209,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_generator.cpp
   ${REPLICATION_DIR}/master_replication_channel.cpp
   ${REPLICATION_DIR}/replication_entry.cpp
-  ${REPLICATION_DIR}/replication_stream.cpp
+  ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/slave_replication_channel.cpp
   )
 
