undo unwanted .gitignore modify

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,198 @@
-*
-!src/*
+
+## Automake files
+Makefile
+Makefile.in
+/aclocal.m4
+/autom4te.cache/
+/config/
+/configure
+.deps/
+config.h
+config.log
+config.status
+/config.h.in
+libtool
+stamp-h1
+libedit.pc
+/external/expat-2.0.1/expat_config.h
+/external/jansson-2.4/jansson.pc
+/external/libgcrypt-1.5.2/mpi/asm-syntax.h
+/external/libgcrypt-1.5.2/mpi/mod-source-info.h
+/external/libgcrypt-1.5.2/mpi/mpi-asm-defs.h
+/external/libgcrypt-1.5.2/mpi/mpih-add1-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-lshift-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-mul1-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-mul2-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-mul3-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-rshift-asm.S
+/external/libgcrypt-1.5.2/mpi/mpih-sub1-asm.S
+/external/libgcrypt-1.5.2/mpi/sysdep.h
+/external/libgcrypt-1.5.2/src/libgcrypt-config
+/external/libgcrypt-1.5.2/src/versioninfo.rc
+/external/libgpg-error-1.11/po/POTFILES
+/external/libgpg-error-1.11/src/gpg-error-config
+/external/libgpg-error-1.11/src/versioninfo.rc
+
+
+## C files
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+# *.lib # we have external dependencies
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+# *.dll # we have external dependencies
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+
+## CUBRID install files
+.libs/
+broker/broker_changer
+broker/broker_log_converter
+broker/broker_log_runner
+broker/broker_log_top
+broker/broker_monitor
+broker/broker_tester
+broker/cub_broker
+broker/cub_cas
+broker/cub_proxy
+broker/cubrid_broker
+broker/cubrid_replay
+cm_common/cub_jobsa
+cm_common/cub_sainfo
+external/bin/
+.installed
+external/expat-2.0.1/examples/elements
+external/expat-2.0.1/examples/outline
+external/expat-2.0.1/xmlwf/xmlwf
+external/include/
+external/lib/
+/external/libgcrypt-1.5.2/src/dumpsexp
+/external/libgcrypt-1.5.2/src/hmac256
+/external/libgpg-error-1.11/lang/cl/gpg-error-codes.lisp
+/external/libgpg-error-1.11/src/code-from-errno.h
+/external/libgpg-error-1.11/src/code-to-errno.h
+/external/libgpg-error-1.11/src/err-codes-sym.h
+/external/libgpg-error-1.11/src/err-sources-sym.h
+/external/libgpg-error-1.11/src/errnos-sym.h
+/external/libgpg-error-1.11/src/extra-h.in
+/external/libgpg-error-1.11/src/gpg-error
+/external/libgpg-error-1.11/src/gpg-error.def
+/external/libgpg-error-1.11/src/mkerrcodes
+/external/libgpg-error-1.11/src/mkerrcodes.h
+/external/libgpg-error-1.11/src/mkw32errmap.map.c
+/external/libgpg-error-1.11/tests/t-strerror
+/external/libgpg-error-1.11/tests/t-syserror
+/external/libgpg-error-1.11/tests/t-version
+!/external/lzo-2.10/Makefile.in
+/external/lzo-2.10/examples/dict
+/external/lzo-2.10/examples/lzopack
+/external/lzo-2.10/examples/overlap
+/external/lzo-2.10/examples/precomp
+/external/lzo-2.10/examples/precomp2
+/external/lzo-2.10/examples/simple
+/external/lzo-2.10/lzotest/lzotest
+/external/lzo-2.10/minilzo/testmini
+/external/lzo-2.10/tests/align
+/external/lzo-2.10/tests/chksum
+/external/lzo-2.10/tests/promote
+/external/lzo-2.10/tests/sizes
+/external/man/
+/external/share/
+/java/bin/
+/java/jspserver.jar
+/java/src-jsp/
+/java/src/
+/jdbc/JDBC-*-cubrid-src.jar
+/jdbc/JDBC-*-cubrid.jar
+/jdbc/bin-cubrid/
+/jdbc/src-cubrid/
+/jdbc/src/
+/msg/*/*.cat
+/timezones/tzlib/timezones.c
+/tools/cci_applier
+/util/addvoldb
+/util/backupdb
+/util/checkdb
+/util/commdb
+/util/compactdb
+/util/convert_password
+/util/copydb
+/util/createdb
+/util/csql
+/util/cub_admin
+/util/cub_commdb
+/util/cub_master
+/util/cub_server
+/util/cubrid
+/util/cubrid_esql
+/util/cubrid_rel
+/util/deletedb
+/util/gencat
+/util/installdb
+/util/killtran
+/util/loaddb
+/util/loadjava
+/util/lockdb
+/util/optimizedb
+/util/renamedb
+/util/restoredb
+/util/spacedb
+/util/sqlx
+/util/unittests_area
+/util/unittests_lf
+/util/unloaddb
+
+## Visual Studio 2008 generated files
+Win32/
+x64/
+x86
+*.user
+*.ncb
+*.suo
+*.ilk
+# *.pdb # we have external dependencies
+/win/install/CUBRID_Debug_Win32/
+/win/install/CUBRID_Release_Win32/
+/win/install/CUBRID_Debug_x86/
+/win/install/CUBRID_Release_x86/
+/win/install/CUBRID_Debug_x64/
+/win/install/CUBRID_Release_x64/
+/win/cubridtray/Debug/
+
+## MISC
+*.swp
+*.bak
+*.*~
+*.*.orig
+tags
+cscope.out
+
+## popular build directories
+Debug/
+Release/
+build_x86_64_debug/
+build_x86_64_release/
