Rename files: replication_entry.hpp, .cpp as replication_object.*

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -224,7 +224,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_consumer.cpp
   ${REPLICATION_DIR}/log_generator.cpp
   ${REPLICATION_DIR}/master_replication_channel.cpp
-  ${REPLICATION_DIR}/replication_entry.cpp
+  ${REPLICATION_DIR}/replication_object.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/slave_replication_channel.cpp
   )  
