--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -308,6 +308,7 @@ set(LOADER_SOURCES
   ${BISON_loader_grammar_OUTPUT_SOURCE}
   ${FLEX_loader_lexer_OUTPUTS}
   ${LOADDB_DIR}/loader_driver.cpp
+  ${LOADDB_DIR}/loader_semantic_helper.cpp
   )
 
 if(UNIX)
