appveyor: install winflexbison version 2.5.14 (bison 3.0.4, flex 2.6.4)
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ matrix:
 
 install:
   - cinst ant -i
-  - cinst winflexbison -i
+  - cinst winflexbison -i --version=2.5.14
 
 build_script:
   - cmake -E make_directory build
