--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ matrix:
 
 install:
   - cinst ant -i
-  - cinst winflexbison -i --version=2.5.14
+  - cinst winflexbison3 -i
 
 build_script:
   - cmake -E make_directory build
