cmake: fix FlexLexer.h include on windows
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -326,7 +326,11 @@ set(ESQL_LEXER_OUTPUT ${CMAKE_BINARY_DIR}/esql_lexer.c)
 include(FindBISON)
 find_package(BISON 3.0.0)
 
-if(NOT BISON_FOUND)
+if(BISON_FOUND)
+  if(WIN32)
+    get_filename_component(BISON_INCLUDE ${BISON_EXECUTABLE} DIRECTORY)
+  endif(WIN32)
+else(BISON_FOUND)
   if(UNIX)
     message(FATAL_ERROR "Please install bison and flex.")
   else()
@@ -338,7 +342,7 @@ if(NOT BISON_FOUND)
       " and retry running cmake."
     )
   endif()
-endif(NOT BISON_FOUND)
+endif(BISON_FOUND)
 
 include(FindFLEX)
 find_package(FLEX 2.5.34 REQUIRED)
