--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -387,6 +387,7 @@ if(WIN32)
   endif(TARGET_PLATFORM_BITS EQUAL 32)
   target_link_libraries(cubridcs LINK_PRIVATE ws2_32)
   set_target_properties(cubridcs PROPERTIES LINK_FLAGS "/DEF:\"${CMAKE_SOURCE_DIR}/win/cubridcs/cubridcs.def\"" LINK_FLAGS_RELEASE "/NODEFAULTLIB:libcmt.lib" LINK_FLAGS_DEBUG "/NODEFAULTLIB:msvcrt.lib")
+  target_include_directories(cubridcs PRIVATE ${BISON_INCLUDE})
 endif(WIN32)
 target_include_directories(cubridcs PRIVATE ${CMAKE_SOURCE_DIR}/src/heaplayers/util ${EP_INCLUDES})
 if(UNIX)
