--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -443,6 +443,7 @@ if(WIN32)
   endif(TARGET_PLATFORM_BITS EQUAL 32)
   target_link_libraries(cubridsa LINK_PRIVATE ws2_32 ${JVM_LIBS})
   set_target_properties(cubridsa PROPERTIES LINK_FLAGS "/DEF:\"${CMAKE_SOURCE_DIR}/win/cubridsa/cubridsa.def\"" LINK_FLAGS_RELEASE "/NODEFAULTLIB:libcmt.lib" LINK_FLAGS_DEBUG "/NODEFAULTLIB:msvcrt.lib")
+  target_include_directories(cubridsa PRIVATE ${BISON_INCLUDE})
 endif(WIN32)
 if(UNIX)
 target_external_dependencies(cubridsa
