--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -326,12 +326,7 @@ set(ESQL_LEXER_OUTPUT ${CMAKE_BINARY_DIR}/esql_lexer.c)
 include(FindBISON)
 find_package(BISON 3.0.0)
 
-if(BISON_FOUND)
-  if(WIN32)
-    get_filename_component(BISON_INCLUDE ${BISON_EXECUTABLE} DIRECTORY)
-    message(STATUS "Using BISON include directory: ${BISON_INCLUDE}")
-  endif(WIN32)
-else(BISON_FOUND)
+if(NOT BISON_FOUND)
   if(UNIX)
     message(FATAL_ERROR "Please install bison and flex.")
   else()
@@ -343,7 +338,7 @@ else(BISON_FOUND)
       " and retry running cmake."
     )
   endif()
-endif(BISON_FOUND)
+endif(NOT BISON_FOUND)
 
 include(FindFLEX)
 find_package(FLEX 2.5.34 REQUIRED)
