--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -248,8 +248,8 @@ set(STORAGE_SOURCES
 set(LOADER_SOURCES
   ${BISON_loader_grammar_OUTPUT_SOURCE}
   ${FLEX_loader_lexer_OUTPUTS}
-  ${LOADDB_DIR}/loader_driver.cpp
-  ${LOADDB_DIR}/loader_semantic_helper.cpp
+  ${LOADDB_DIR}/driver.cpp
+  ${LOADDB_DIR}/semantic_helper.cpp
   )
 
 list(APPEND CONNECTION_SOURCES ${CONNECTION_DIR}/heartbeat.c)
