[CBRD-22073] Master/Slave Replication Channel (#1117)
* CBRD-22074: -add update_hostname_interval timer system param
	    -add master hostname to slave
	    -SERVER_RECEIVE_MASTER_HOSTNAME and SERVER_CONNECT_NEW_SLAVE
	    -platform_independent_poll
	    -add custom request to css_transfer_fd
	    -slave req SERVER_REQUEST_CONNECT_NEW_SLAVE for master cub_master
	    -hb_resource_job_send_master_hostname

* CBRD-22074: _er_log -> er_log

* CBRD-22074: add dependency for win

* CBRD-22074: statically alloc master_hostname

* CBRD-22074: HOST_NAME_MAX -> MAXHOSTNAMELEN

* CBRD-22073: instantiation of master/slave repl chn
	    unit test fix
	    cubstream razvan
	    stream transfers

* CBRD-22073: small changes, unit test doesn't crash

* CBRD-22073: master/slave repl chns + unit test

* CBRD-22073: indent/astyle
	    comments

* CBRD-22073: merge issue

* CBRD-22073: fix indent
	    put mocking_stream in unit test

* CBRD-22073: fix indent

* CBRD-22073: add mock stream

* CBRD-22073: add cub_server_comm_chn

* CBRD-22073: avoid race cond

* CBRD-22073: merge problem

* repair spaces

* CBRD-22073: char * -> std::string
		remove private members

* CBRD-22073: protect master_channels by mutex

* CBRD-22073: cubcomm namespace; add comm_chn and server_comm_chn
	    remove slave/master repl chn, replace with transfer_chns
	    remove daemons for master repl chns
	    fix unit tests

* CBRD-22073: add comm_serv_chn, fix comm chn uni test

* CBRD-22073: add manager master

* formatting, indent/astyle

* CBRD-22073: hton/ntoh,

* CBRD-22073: astyle

* CBRD-22073: make block_until_position_sent, use rwlock

* CBRD-22073: remzi review

* CBRD-22073: remzi review

* CBRD-22073: move static func

* CBRD-22073: fix get_number_of_stream_senders

* CBRD-22073: move func

* CBRD-22073: move func

* CBRD-22073: remove code

* CBRD-22073: remove g slave stream recv and temp stream

* CBRD-22073: move 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -480,6 +480,7 @@ set(OLEDB_DIR                ${CMAKE_SOURCE_DIR}/src/oledb)
 set(OPTIMIZER_DIR            ${CMAKE_SOURCE_DIR}/src/optimizer)
 set(PARSER_DIR               ${CMAKE_SOURCE_DIR}/src/parser)
 set(QUERY_DIR                ${CMAKE_SOURCE_DIR}/src/query)
+set(REPLICATION_DIR          ${CMAKE_SOURCE_DIR}/src/replication)
 set(SESSION_DIR              ${CMAKE_SOURCE_DIR}/src/session)
 set(STORAGE_DIR              ${CMAKE_SOURCE_DIR}/src/storage)
 set(THREAD_DIR               ${CMAKE_SOURCE_DIR}/src/thread)
@@ -505,6 +506,7 @@ include_directories(
   src/object
   src/optimizer
   src/parser
+  src/replication
   src/query
   src/session
   src/storage
