--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -34,6 +34,7 @@ option (UNIT_TEST_THREAD "Unit testing: thread module")
 option (UNIT_TEST_COMM_CHN "Unit testing: communication channel module")
 option (UNIT_TEST_TRANS_CHN "Unit testing: transfer channel module")
 option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
+option (UNIT_TEST_REPLICATION "Unit testing: replication channels module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
 option (UNIT_TEST_MONITOR "Unit testing: monitor")
 
@@ -88,6 +89,11 @@ if (UNIT_TESTS OR UNIT_TEST_DDL_CL)
   message("    ddl_proxy_client")
   add_subdirectory(ddl_proxy_client)
 endif(UNIT_TESTS OR UNIT_TEST_DDL_CL)
+
+if (UNIT_TESTS OR UNIT_TEST_REPLICATION)
+  message("    replication_channels")
+  add_subdirectory(replication_channels)
+endif(UNIT_TESTS OR UNIT_TEST_REPLICATION)
 
 if (UNIT_TESTS OR UNIT_TEST_RESOURCE_TRACKER)
   message("    resource_tracker")
